Final website update: smaller cards, mobile responsive, working favicon

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PDVR Gaming - Virtual Reality Gaming Experience</title>
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="icon" type="image/png" href="index game icon.jpg">
+    <link rel="apple-touch-icon" href="index game icon.jpg">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
