color pattern fix, light theme improvements

--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -42,6 +42,7 @@
                 <div id="customers-tab" class="tab-content">
                     <div class="section-header">
                         <h2>Customer Analytics</h2>
+                        <button onclick="showDateView()" class="btn btn-primary" id="dateViewBtn">Date View</button>
                     </div>
                     
                     <div class="filters">
@@ -68,6 +69,7 @@
                         </div>
                     </div>
                     
+                    <div id="dateCardsView" class="date-cards-grid" style="display: none;"></div>
                     <div id="customersList" class="data-grid"></div>
                 </div>
             </div>
