--- a/employee-dashboard.html
+++ b/employee-dashboard.html
@@ -25,13 +25,13 @@
         <main class="dashboard-main">
             <div class="container">
                 <div class="dashboard-tabs">
-                    <button class="tab-btn active" onclick="showTab('add-customer')">Add Customer</button>
+                    <button class="tab-btn active" onclick="showTab('add-customer')">➕ Add</button>
                     <button class="tab-btn" onclick="showTab('view-customers')">
-                        View Customers
+                        👁️ View
                         <span id="customerCount" class="badge">0</span>
                     </button>
-                    <button class="tab-btn" onclick="showTab('todays-customers')">Today's Customers</button>
-                    <button class="tab-btn" onclick="showTab('my-customers')">My Customers</button>
+                    <button class="tab-btn" onclick="showTab('todays-customers')">📅 Today's</button>
+                    <button class="tab-btn" onclick="showTab('my-customers')">👤 My</button>
                 </div>
 
                 <!-- Add Customer Tab -->
