--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header class="header">
         <div class="container">
-            <div class="logo" onclick="showHome()" style="cursor: pointer; border: 1px solid rgba(255, 255, 255, 0.2); padding: 10px; border-radius: 8px; background: rgba(255, 255, 255, 0.1);">
+            <div class="logo" onclick="showHome()" style="cursor: pointer;">
                 <h1>PDVR Gaming</h1>
                 <span>Virtual Reality Gaming Experience</span>
             </div>
@@ -52,105 +52,92 @@
                 
                 <!-- 360 Experience -->
                 <div class="category-section">
-                    <h3 class="category-title experience-360">🎢 360° OF PURE ADRENALINE.</h3>
+                    <h3 class="category-title experience-360">🎢 360° OF Pure Adrenaline</h3>
                     <div class="services-grid">
                     <div class="service-card">
                         <img src="ROLLER OCASTER.jpg" alt="Roller Coaster VR" class="service-image">
                         <h4>Roller Coaster</h4>
                         <p>Experience thrilling roller coaster rides in virtual reality with stunning visuals and heart-pounding excitement.</p>
-                        <a href="login.html" class="service-btn">Book Now</a>
                     </div>
                     <div class="service-card">
                         <img src="santa ride.jpg" alt="Santa Ride VR" class="service-image">
                         <h4>Santa Ride</h4>
                         <p>Join Santa on a magical Christmas adventure through snowy landscapes and festive wonderlands.</p>
-                        <a href="login.html" class="service-btn">Book Now</a>
                     </div>
                     <div class="service-card">
                         <img src="henry.jpg" alt="Henry VR" class="service-image">
                         <h4>Henry</h4>
                         <p>Adventure awaits at Henry’s unforgettable VR birthday celebration today!.</p>
-                        <a href="login.html" class="service-btn">Book Now</a>
+
                     </div>
                     <div class="service-card">
                         <img src="jurassic park.png" alt="Jurassic Park VR" class="service-image">
                         <h4>Jurassic Park</h4>
                         <p>Walk among dinosaurs in this thrilling prehistoric adventure. Face T-Rex and explore ancient worlds.</p>
-                        <a href="login.html" class="service-btn">Book Now</a>
                     </div>
                 </div>
                 </div>
 
                 <!-- Gaming Experience -->
                 <div class="category-section">
-                    <h3 class="category-title experience-gaming">🔥 UNREAL WORLDS. REAL IMPACT.</h3>
+                    <h3 class="category-title experience-gaming">🔥 Unreal Worlds. Real Impact</h3>
                     <div class="services-grid">
                     <div class="service-card">
                         <img src="beat saber.jpg" alt="Beat Saber VR" class="service-image">
                         <h4>Beat Saber</h4>
                         <p>Slice through beats in this rhythm VR game. Test your reflexes and enjoy energetic music.</p>
-                        <a href="login.html" class="service-btn">Book Now</a>
                     </div>
                     <div class="service-card">
                         <img src="iron man.jpg" alt="Iron Man VR" class="service-image">
                         <h4>Iron Man</h4>
                         <p>Become the legendary superhero and fly through cities with Iron Man's powerful suit.</p>
-                        <a href="login.html" class="service-btn">Book Now</a>
                     </div>
                     <div class="service-card">
                         <img src="richies plank.jpg" alt="Richie's Plank VR" class="service-image">
                         <h4>Richie's Plank</h4>
                         <p>Test your courage on a virtual plank high above the city. Perfect for thrill seekers!</p>
-                        <a href="login.html" class="service-btn">Book Now</a>
                     </div>
                     <div class="service-card">
                         <img src="boxing.jpg" alt="Boxing VR" class="service-image">
                         <h4>Boxing</h4>
                         <p>Step into the ring and experience intense boxing matches with realistic combat mechanics.</p>
-                        <a href="login.html" class="service-btn">Book Now</a>
                     </div>
                     <div class="service-card">
                         <img src="horror.jpg" alt="Horror VR" class="service-image">
                         <h4>Horror</h4>
                         <p>Face your fears in spine-chilling horror experiences. Not for the faint-hearted!</p>
-                        <a href="login.html" class="service-btn">Book Now</a>
                     </div>
                     <div class="service-card">
                         <img src="cricket.jpg" alt="Cricket VR" class="service-image">
                         <h4>Cricket</h4>
                         <p>Play cricket in virtual stadiums with realistic physics and crowd atmosphere.</p>
-                        <a href="login.html" class="service-btn">Book Now</a>
                     </div>
                 </div>
                 </div>
 
                 <!-- Educational Experience -->
                 <div class="category-section">
-                    <h3 class="category-title experience-educational">🌌 LEARN WHAT CAN’T BE TAUGHT!</h3>
+                    <h3 class="category-title experience-educational">🌌 Learn What Can’t Be Taught!</h3>
                     <div class="services-grid">
                     <div class="service-card">
                         <img src="solar system.jpg" alt="Solar System VR" class="service-image">
                         <h4>Solar System</h4>
                         <p>Explore planets, moons, and stars in an immersive journey through our solar system.</p>
-                        <a href="login.html" class="service-btn">Book Now</a>
                     </div>
                     <div class="service-card">
                         <img src="ocean rift.jpg" alt="Ocean Rift VR" class="service-image">
                         <h4>Ocean Rift</h4>
                         <p>Dive deep into ocean depths and discover marine life in stunning underwater environments.</p>
-                        <a href="login.html" class="service-btn">Book Now</a>
                     </div>
                     <div class="service-card">
                         <img src="mission iss.jpg" alt="Mission ISS VR" class="service-image">
                         <h4>Mission ISS</h4>
                         <p>Experience life aboard the International Space Station and explore space like an astronaut.</p>
-                        <a href="login.html" class="service-btn">Book Now</a>
                     </div>
                     <div class="service-card">
                         <img src="anatomy.jpg" alt="Anatomy VR" class="service-image">
                         <h4>Anatomy</h4>
                         <p>Explore human anatomy in 3D detail. Perfect for educational and medical learning experiences.</p>
-                        <a href="login.html" class="service-btn">Book Now</a>
                     </div>
                 </div>
                 </div>
@@ -163,11 +150,11 @@
                 <div class="contact-grid">
                     <div class="contact-item">
                         <h3>📞 Phone</h3>
-                        <p>+91 9133020759</p>
+                        <a href="tel:+919133020759" class="btn btn-primary">+91 9133020759</a>
                     </div>
                     <div class="contact-item">
                         <h3>📧 Email</h3>
-                        <p>gamingpdvr@gmail.com</p>
+                        <a href="mailto:gamingpdvr@gmail.com" class="btn btn-primary" style="text-align: center;">gamingpdvr@gmail.com</a>
                     </div>
                     <div class="contact-item">
                         <h3>📍 Location</h3>
