EDIT BUTTON ADDED

--- a/employee-dashboard.html
+++ b/employee-dashboard.html
@@ -186,8 +186,9 @@
             <div id="customerDetailsContent" class="customer-details"></div>
             <div class="form-actions">
                 <button onclick="closeModal('customerDetailsModal')" class="btn btn-secondary">Close</button>
+                <button id="editCustomerBtn" class="btn btn-primary">Edit</button>
                 <button id="generateUpiBtn" class="btn btn-accent" style="display: none;">Generate UPI QR</button>
-                <button id="submitCustomerBtn" class="btn btn-success">Submit (Mark as Paid)</button>
+                <button id="submitCustomerBtn" class="btn btn-success">Submit</button>
             </div>
         </div>
     </div>
